# YTMusicRichPresence

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE-3RD-PARTY.txt  README.md  YTMusicRichPresence.cpp  manifest.json
extension/: YTMusicContentScript.js  YTMusicContentScriptNew.js  background.js  manifest.json
src/: YTMusicRichPresence.cpp
